data/derived/fa15/progs/unify/prog3259.ml.out
Characters 54-55:
  let fixpoint (f,b) = wwhile(if f b = true then b else f, b);;
                                                        ^
Error: This expression has type ('a -> 'a * bool) * 'a -> bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside ('a -> 'a * bool) * 'a
